...
  calculators(
    label: 'Calculators',
    icon: Icons.calculate_outlined,
    selectedIcon: Icons.calculate,
  ),
  equipment(
    label: 'Equipment',
    icon: Icons.camera_alt_outlined,
    selectedIcon: Icons.camera_alt,
  ),
  saved(
    label: 'Saved',
    icon: Icons.bookmark_border,
...
